[tool.poetry]
name = "comic-dl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "ReadMe.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
bs4 = "^0.0.1"
requests = "^2.31.0"
clint = "^0.5.1"
img2pdf = "^0.5.1"
future = "^0.18.3"
colorama = "^0.4.6"
cloudscraper = "^1.2.71"
jsbeautifier = "^1.14.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
comic_dl = 'comic_dl:main'
